# py-waiter

./: .gitlab-ci.yml  LICENSE.md  README.md  pyproject.toml
.github/workflows/: python-package.yml
_dist/: waiter-0.1.2-py3-none-any.whl  waiter-0.1.3-py3-none-any.whl
examples/app1/: app.py
examples/app2/: app.py
tests/: test_main.py  test_spinners.py
waiter/: pyproject.toml  server.py  spinners.py  ui.py
waiter/examples/app2/: app.py
waiter/srcjs/: LICENSE.md
waiter/tests/: test_spinners.py
waiter/waiter/: __init__.py  server.py  spinners.py  ui.py
