[tool.poetry]
name = "waiter"
version = "0.1.2"
description = ""
authors = ["Stefan Kuethe <stefan.kuethe@eoda.de>"]
readme = "README.md"
license = "MIT"
include = [
    { path = "srcjs", format = ["sdist", "wheel"] }
]

[tool.poetry.dependencies]
python = ">=3.8"
htmltools = "^0.5.0"
shiny = "^0.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.12.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
